Support Linux builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,9 +26,14 @@ MARK_AS_ADVANCED(FOUNDATION_LIBRARY)
 MARK_AS_ADVANCED(APPSERVICES_LIBRARY)
 MARK_AS_ADVANCED(IOKIT_LIBRARY)
 SET(EXTRA_LIBS ${IOKIT_LIBRARY} ${OPENGL_LIBRARY} ${FOUNDATION_LIBRARY} ${APPSERVICES_LIBRARY} ${APPKIT_LIBRARY} ${AUDIOTOOLBOX_LIBRARY} freetype z tgui2)
-target_link_libraries(ashedit2 ${EXTRA_LIBS} ${TGUI_LIB} allegro_image${ALLEG_SUFFIX} allegro_ttf${ALLEG_SUFFIX} allegro_font${ALLEG_SUFFIX} allegro_primitives${ALLEG_SUFFIX} allegro_color${ALLEG_SUFFIX} allegro_dialog${ALLEG_SUFFIX} allegro${ALLEG_SUFFIX} allegro_main${ALLEG_SUFFIX} allegro_memfile${ALLEG_SUFFIX})
+target_link_libraries(ashedit2 ${EXTRA_LIBS} ${TGUI_LIB} allegro_image${ALLEG_SUFFIX} allegro_ttf${ALLEG_SUFFIX} allegro_font${ALLEG_SUFFIX} allegro_primitives${ALLEG_SUFFIX} allegro_color${ALLEG_SUFFIX} allegro_native_dialog${ALLEG_SUFFIX} allegro${ALLEG_SUFFIX} allegro_main${ALLEG_SUFFIX} allegro_memfile${ALLEG_SUFFIX})
 else(APPLE)
-target_link_libraries(ashedit2 ${TGUI_LIB} allegro_image${ALLEG_SUFFIX} allegro_ttf${ALLEG_SUFFIX} allegro_font${ALLEG_SUFFIX} allegro_primitives${ALLEG_SUFFIX} allegro_color${ALLEG_SUFFIX} allegro_dialog${ALLEG_SUFFIX} allegro${ALLEG_SUFFIX} allegro_main${ALLEG_SUFFIX} allegro_memfile${ALLEG_SUFFIX} "opengl32" "dxguid" "dinput8" "dsound" "d3d9" "kernel32" "user32" "gdi32" "comdlg32" "ole32" "winmm" "psapi" "gdiplus" "uuid" "shlwapi" "opengl32" "freetype" "z" "tgui2")
+  if(WIN32)
+    target_link_libraries(ashedit2 ${TGUI_LIB} allegro_image${ALLEG_SUFFIX} allegro_ttf${ALLEG_SUFFIX} allegro_font${ALLEG_SUFFIX} allegro_primitives${ALLEG_SUFFIX} allegro_color${ALLEG_SUFFIX} allegro_native_dialog${ALLEG_SUFFIX} allegro${ALLEG_SUFFIX} allegro_main${ALLEG_SUFFIX} allegro_memfile${ALLEG_SUFFIX} "opengl32" "dxguid" "dinput8" "dsound" "d3d9" "kernel32" "user32" "gdi32" "comdlg32" "ole32" "winmm" "psapi" "gdiplus" "uuid" "shlwapi" "opengl32" "freetype" "z" "tgui2")
+  else(WIN32)
+    find_package(GTK2)
+    target_link_libraries(ashedit2 ${TGUI_LIB} allegro_image${ALLEG_SUFFIX} allegro_ttf${ALLEG_SUFFIX} allegro_font${ALLEG_SUFFIX} allegro_primitives${ALLEG_SUFFIX} allegro_color${ALLEG_SUFFIX} allegro_native_dialog${ALLEG_SUFFIX} allegro${ALLEG_SUFFIX} allegro_main${ALLEG_SUFFIX} allegro_memfile${ALLEG_SUFFIX} z tgui2 pthread SM ICE X11 Xext Xcursor Xinerama Xrandr Xpm GL GLU jpeg ${GTK2_LIBRARIES})
+  endif(WIN32)
 endif(APPLE)
 
 if(WIN32)
