--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,6 @@ cmake_minimum_required(VERSION 2.6)
 
 option(MO2 "Build for Monster RPG 2 format levels" on)
 
-set(ASHEDIT2_SRC main.cpp general.cpp)
-
 if(NOT ("${USER_INCLUDE_PATH}" STREQUAL ""))
 	include_directories(${USER_INCLUDE_PATH})
 endif(NOT ("${USER_INCLUDE_PATH}" STREQUAL ""))
@@ -12,36 +10,12 @@ if(NOT ("${USER_LIBRARY_PATH}" STREQUAL ""))
 	link_directories(${USER_LIBRARY_PATH})
 endif(NOT ("${USER_LIBRARY_PATH}" STREQUAL ""))
 
-add_executable(ashedit2 ${ASHEDIT2_SRC})
-
-set(ALLEG_SUFFIX "-static")
-
-if(APPLE)
-FIND_LIBRARY(OPENGL_LIBRARY OpenGL)
-FIND_LIBRARY(FOUNDATION_LIBRARY Foundation)
-FIND_LIBRARY(APPSERVICES_LIBRARY ApplicationServices)
-FIND_LIBRARY(APPKIT_LIBRARY AppKit)
-FIND_LIBRARY(IOKIT_LIBRARY IOKit)
-FIND_LIBRARY(AUDIOTOOLBOX_LIBRARY AudioToolbox)
-MARK_AS_ADVANCED(OPENGL_LIBRARY)
-MARK_AS_ADVANCED(FOUNDATION_LIBRARY)
-MARK_AS_ADVANCED(APPSERVICES_LIBRARY)
-MARK_AS_ADVANCED(IOKIT_LIBRARY)
-SET(EXTRA_LIBS ${IOKIT_LIBRARY} ${OPENGL_LIBRARY} ${FOUNDATION_LIBRARY} ${APPSERVICES_LIBRARY} ${APPKIT_LIBRARY} ${AUDIOTOOLBOX_LIBRARY} freetype z tgui2)
-target_link_libraries(ashedit2 ${EXTRA_LIBS} allegro_image${ALLEG_SUFFIX} allegro_ttf${ALLEG_SUFFIX} allegro_font${ALLEG_SUFFIX} allegro_primitives${ALLEG_SUFFIX} allegro_color${ALLEG_SUFFIX} allegro_dialog${ALLEG_SUFFIX} allegro${ALLEG_SUFFIX} allegro_main${ALLEG_SUFFIX} allegro_memfile${ALLEG_SUFFIX} png jpeg)
-else(APPLE)
-  if(WIN32)
-    target_link_libraries(ashedit2 allegro_image${ALLEG_SUFFIX} allegro_ttf${ALLEG_SUFFIX} allegro_font${ALLEG_SUFFIX} allegro_primitives${ALLEG_SUFFIX} allegro_color${ALLEG_SUFFIX} allegro_dialog${ALLEG_SUFFIX} allegro${ALLEG_SUFFIX} allegro_main${ALLEG_SUFFIX} allegro_memfile${ALLEG_SUFFIX} "opengl32" "dxguid" "dinput8" "dsound" "d3d9" "kernel32" "user32" "gdi32" "comdlg32" "ole32" "winmm" "psapi" "gdiplus" "uuid" "shlwapi" "opengl32" "freetype" "z" "tgui2")
-  else(WIN32)
-    target_link_libraries(ashedit2 allegro_image${ALLEG_SUFFIX} allegro_ttf${ALLEG_SUFFIX} allegro_font${ALLEG_SUFFIX} allegro_primitives${ALLEG_SUFFIX} allegro_color${ALLEG_SUFFIX} allegro_dialog${ALLEG_SUFFIX} allegro${ALLEG_SUFFIX} allegro_main${ALLEG_SUFFIX} allegro_memfile${ALLEG_SUFFIX} freetype z tgui2 m pthread SM ICE X11 Xext Xcursor Xinerama Xrandr Xpm GL GLU)
-  endif(WIN32)
-endif(APPLE)
+set(ASHEDIT2_SRC main.cpp general.cpp)
 
 if(WIN32)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mwindows -static-libgcc -static-libstdc++ -g")
-	if(MO2)
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DMONSTERRPG2")
-	endif()
-	set(CMAKE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
-endif(WIN32)
+	add_executable(ashedit2 WIN32 ${ASHEDIT2_SRC})
+else()
+	add_executable(ashedit2 ${ASHEDIT2_SRC})
+endif()
 
+target_link_libraries(ashedit2 "allegro_monolith" "tgui2")
