Build release static using allegro_monolith. Include an icon on Windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ project(AshEdit2)
 cmake_minimum_required(VERSION 2.6)
 
 option(MO2 "Build for Monster RPG 2 format levels" on)
+option(TGA "Use .tga tile sheets" off)
 
 if(NOT ("${USER_INCLUDE_PATH}" STREQUAL ""))
 	include_directories(${USER_INCLUDE_PATH})
@@ -13,9 +14,25 @@ endif(NOT ("${USER_LIBRARY_PATH}" STREQUAL ""))
 set(ASHEDIT2_SRC main.cpp general.cpp)
 
 if(WIN32)
+	if(MO2)
+		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /DMONSTERRPG2")
+	endif()
+	if(TGA)
+		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /DUSE_TGA")
+	endif()
+	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+	list(APPEND ASHEDIT2_SRC "icon.rc")
 	add_executable(ashedit2 WIN32 ${ASHEDIT2_SRC})
 else()
+	if(MO2)
+		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DMONSTERRPG2")
+	endif()
+	if(TGA)
+		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DUSE_TGA")
+	endif()
 	add_executable(ashedit2 ${ASHEDIT2_SRC})
 endif()
 
-target_link_libraries(ashedit2 "allegro_monolith" "tgui2")
+if(WIN32)
+	target_link_libraries(ashedit2 "tgui2" "allegro_monolith-static" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
+endif()
