Rename AshEdit2 -> AshEdit since 1 was never released

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,9 @@
-project(AshEdit2)
+project(AshEdit)
 cmake_minimum_required(VERSION 2.6)
 
 option(MO2 "Build for Monster RPG 2 format levels" on)
 option(TGA "Use .tga tile sheets" off)
+option(SS "Use 8x8 tiles" off)
 
 if(NOT ("${USER_INCLUDE_PATH}" STREQUAL ""))
 	include_directories(${USER_INCLUDE_PATH})
@@ -11,7 +12,7 @@ if(NOT ("${USER_LIBRARY_PATH}" STREQUAL ""))
 	link_directories(${USER_LIBRARY_PATH})
 endif(NOT ("${USER_LIBRARY_PATH}" STREQUAL ""))
 
-set(ASHEDIT2_SRC main.cpp general.cpp)
+set(ASHEDIT_SRC main.cpp general.cpp)
 
 if(WIN32)
 	if(MO2)
@@ -20,9 +21,12 @@ if(WIN32)
 	if(TGA)
 		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /DUSE_TGA")
 	endif()
+	if(SS)
+		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /DUSE_8X8")
+	endif()
 	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
-	list(APPEND ASHEDIT2_SRC "icon.rc")
-	add_executable(ashedit2 WIN32 ${ASHEDIT2_SRC})
+	list(APPEND ASHEDIT_SRC "icon.rc")
+	add_executable(ashedit WIN32 ${ASHEDIT_SRC})
 else()
 	if(MO2)
 		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DMONSTERRPG2")
@@ -30,9 +34,12 @@ else()
 	if(TGA)
 		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DUSE_TGA")
 	endif()
-	add_executable(ashedit2 ${ASHEDIT2_SRC})
+	if(SS)
+		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DUSE_8X8")
+	endif()
+	add_executable(ashedit ${ASHEDIT_SRC})
 endif()
 
 if(WIN32)
-	target_link_libraries(ashedit2 "tgui2" "allegro_monolith-static" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
+	target_link_libraries(ashedit "tgui2" "allegro_monolith-static" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
 endif()
