Allow debug build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 project(AshEdit)
 cmake_minimum_required(VERSION 2.6)
 
-option(MO2 "Build for Monster RPG 2 format levels" on)
+option(MO2 "Build for Monster RPG 2 format levels" off)
 option(TGA "Use .tga tile sheets" off)
-option(SS "Use 8x8 tiles" off)
+option(USE_8X8 "Use 8x8 tiles" off)
+option(SS "Build for SS" off)
 
 if(NOT ("${USER_INCLUDE_PATH}" STREQUAL ""))
 	include_directories(${USER_INCLUDE_PATH})
@@ -14,32 +15,46 @@ endif(NOT ("${USER_LIBRARY_PATH}" STREQUAL ""))
 
 set(ASHEDIT_SRC main.cpp general.cpp)
 
-if(WIN32)
-	if(MO2)
-		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /DMONSTERRPG2")
-	endif()
-	if(TGA)
-		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /DUSE_TGA")
-	endif()
-	if(SS)
-		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /DUSE_8X8")
-	endif()
-	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
-	list(APPEND ASHEDIT_SRC "icon.rc")
-	add_executable(ashedit WIN32 ${ASHEDIT_SRC})
-else()
-	if(MO2)
-		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DMONSTERRPG2")
-	endif()
-	if(TGA)
-		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DUSE_TGA")
-	endif()
-	if(SS)
-		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -DUSE_8X8")
-	endif()
-	add_executable(ashedit ${ASHEDIT_SRC})
-endif()
+set(FLAGS "")
 
 if(WIN32)
-	target_link_libraries(ashedit "tgui2" "allegro_monolith-static" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
+	if(NOT SS AND MO2)
+		set(FLAGS "${FLAGS} /DMONSTERRPG2")
+	endif()
+	if(SS OR TGA)
+		set(FLAGS "${FLAGS} /DUSE_TGA")
+	endif()
+	if(SS OR USE_8X8)
+		set(FLAGS "${FLAGS} /DUSE_8X8")
+	endif()
+
+	if(CMAKE_BUILD_TYPE MATCHES Debug)
+		set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${FLAGS} /MTd")
+	else()
+		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${FLAGS} /MT")
+	endif()
+	list(APPEND ASHEDIT_SRC "icon.rc")
+	add_executable(ashedit WIN32 ${ASHEDIT_SRC})
+	if(CMAKE_BUILD_TYPE MATCHES Debug)
+		target_link_libraries(ashedit "tgui2d" "allegro_monolith-debug" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
+	else()
+		target_link_libraries(ashedit "tgui2" "allegro_monolith-static" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
+	endif()
+else()
+	if(NOT SS AND MO2)
+		set(FLAGS "${FLAGS} -DMONSTERRPG2")
+	endif()
+	if(SS OR TGA)
+		set(FLAGS "${FLAGS} -DUSE_TGA")
+	endif()
+	if(SS OR USE_8X8)
+		set(FLAGS "${FLAGS} -DUSE_8X8")
+	endif()
+	if(CMAKE_BUILD_TYPE MATCHES Debug)
+		set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${FLAGS}")
+	else()
+		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${FLAGS}")
+	endif()
+	add_executable(ashedit ${ASHEDIT_SRC})
+	target_link_libraries(ashedit "tgui2" "allegro_monolith-static")
 endif()
