--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ if(NOT ("${USER_LIBRARY_PATH}" STREQUAL ""))
 	link_directories(${USER_LIBRARY_PATH})
 endif(NOT ("${USER_LIBRARY_PATH}" STREQUAL ""))
 
-set(ASHEDIT_SRC main.cpp general.cpp)
+include_directories("include")
+
+set(ASHEDIT_SRC src/main.cpp src/general.cpp)
 
 set(FLAGS "")
 
@@ -33,12 +35,12 @@ if(WIN32)
 	else()
 		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${FLAGS} /MT")
 	endif()
-	list(APPEND ASHEDIT_SRC "icon.rc")
-	add_executable(ashedit WIN32 ${ASHEDIT_SRC})
+	list(APPEND ASHEDIT_SRC "src/icon.rc")
+	add_executable(AshEdit WIN32 ${ASHEDIT_SRC})
 	if(CMAKE_BUILD_TYPE MATCHES Debug)
-		target_link_libraries(ashedit "tgui2d" "allegro_monolith-debug" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
+		target_link_libraries(AshEdit "tgui2d" "allegro_monolith-debug" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
 	else()
-		target_link_libraries(ashedit "tgui2" "allegro_monolith-static" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
+		target_link_libraries(AshEdit "tgui2" "allegro_monolith-static" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
 	endif()
 else()
 	if(NOT SS AND MO2)
@@ -55,6 +57,6 @@ else()
 	else()
 		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${FLAGS}")
 	endif()
-	add_executable(ashedit ${ASHEDIT_SRC})
-	target_link_libraries(ashedit "tgui2" "allegro_monolith-static")
+	add_executable(AshEdit ${ASHEDIT_SRC})
+	target_link_libraries(AshEdit "tgui2" "allegro_monolith-static")
 endif()
