--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ option(MO2 "Build for Monster RPG 2 format levels" off)
 option(TGA "Use .tga tile sheets" off)
 option(USE_8X8 "Use 8x8 tiles" off)
 option(SS "Build for SS" off)
+option(SCALE "Amount to scale up" 2)
 
 if(NOT ("${USER_INCLUDE_PATH}" STREQUAL ""))
 	include_directories(${USER_INCLUDE_PATH})
@@ -20,6 +21,7 @@ set(ASHEDIT_SRC src/main.cpp src/general.cpp)
 set(FLAGS "")
 
 if(WIN32)
+	set(FLAGS "${FLAGS} /DSCALE=${SCALE}")
 	if(NOT SS AND MO2)
 		set(FLAGS "${FLAGS} /DMONSTERRPG2")
 	endif()
@@ -43,6 +45,7 @@ if(WIN32)
 		target_link_libraries(AshEdit "tgui2" "allegro_monolith-static" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
 	endif()
 else()
+	set(FLAGS "${FLAGS} -DSCALE=${SCALE}")
 	if(NOT SS AND MO2)
 		set(FLAGS "${FLAGS} -DMONSTERRPG2")
 	endif()
