Rename some options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 project(AshEdit)
 cmake_minimum_required(VERSION 2.6)
 
-option(MO2 "Build for Monster RPG 2 format levels" off)
+option(MO2 "Build for Monster RPG 2 format levels" on)
+option(MO3 "Build for MO3" off)
 option(TGA "Use .tga tile sheets" off)
 option(USE_8X8 "Use 8x8 tiles" off)
-option(SS "Build for SS" off)
-option(SCALE "Amount to scale up" 2)
+option(SCALE "Default scale" 2)
 
 if(NOT ("${USER_INCLUDE_PATH}" STREQUAL ""))
 	include_directories(${USER_INCLUDE_PATH})
@@ -22,14 +22,17 @@ set(FLAGS "")
 
 if(WIN32)
 	set(FLAGS "${FLAGS} /DSCALE=${SCALE}")
-	if(NOT SS AND MO2)
-		set(FLAGS "${FLAGS} /DMONSTERRPG2")
+	if(NOT MO3 AND MO2)
+		set(FLAGS "${FLAGS} /DMO2")
 	endif()
-	if(SS OR TGA)
+	if(MO3 OR TGA)
 		set(FLAGS "${FLAGS} /DUSE_TGA")
 	endif()
-	if(SS OR USE_8X8)
+	if(MO3 OR USE_8X8)
 		set(FLAGS "${FLAGS} /DUSE_8X8")
+	endif()
+	if(MO3)
+		set(FLAGS "${FLAGS} /DMO3")
 	endif()
 
 	if(CMAKE_BUILD_TYPE MATCHES Debug)
@@ -46,13 +49,16 @@ if(WIN32)
 	endif()
 else()
 	set(FLAGS "${FLAGS} -DSCALE=${SCALE}")
-	if(NOT SS AND MO2)
-		set(FLAGS "${FLAGS} -DMONSTERRPG2")
+	if(NOT MO3 AND MO2)
+		set(FLAGS "${FLAGS} -DMO2")
 	endif()
-	if(SS OR TGA)
+	if(MO3 OR TGA)
 		set(FLAGS "${FLAGS} -DUSE_TGA")
 	endif()
-	if(SS OR USE_8X8)
+	if(MO3)
+		set(FLAGS "${FLAGS} /DMO3")
+	endif()
+	if(MO3 OR USE_8X8)
 		set(FLAGS "${FLAGS} -DUSE_8X8")
 	endif()
 	if(CMAKE_BUILD_TYPE MATCHES Debug)
