Change MO3 level format: use x, y so sheets can change size

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,10 @@
 project(AshEdit)
 cmake_minimum_required(VERSION 2.6)
 
-option(MO2 "Build for Monster RPG 2 format levels" on)
+option(MO2 "Build for Monster RPG 2 format levels" off)
 option(MO3 "Build for MO3" off)
 option(TGA "Use .tga tile sheets" off)
 option(USE_8X8 "Use 8x8 tiles" off)
-option(SCALE "Default scale" 2)
 
 if(NOT ("${USER_INCLUDE_PATH}" STREQUAL ""))
 	include_directories(${USER_INCLUDE_PATH})
@@ -21,18 +20,19 @@ set(ASHEDIT_SRC src/main.cpp src/general.cpp)
 set(FLAGS "")
 
 if(WIN32)
-	set(FLAGS "${FLAGS} /DSCALE=${SCALE}")
-	if(NOT MO3 AND MO2)
+	if(MO2)
 		set(FLAGS "${FLAGS} /DMO2")
-	endif()
-	if(MO3 OR TGA)
-		set(FLAGS "${FLAGS} /DUSE_TGA")
-	endif()
-	if(MO3 OR USE_8X8)
-		set(FLAGS "${FLAGS} /DUSE_8X8")
 	endif()
 	if(MO3)
 		set(FLAGS "${FLAGS} /DMO3")
+		set(USE_8X8 on)
+	endif()
+	if(TGA)
+		set(FLAGS "${FLAGS} /DUSE_TGA")
+	endif()
+	if(USE_8X8)
+		set(FLAGS "${FLAGS} /DUSE_8X8")
+		set(FLAGS "${FLAGS} /DSCALE=4")
 	endif()
 
 	if(CMAKE_BUILD_TYPE MATCHES Debug)
@@ -48,7 +48,6 @@ if(WIN32)
 		target_link_libraries(AshEdit "tgui2" "allegro_monolith-static" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
 	endif()
 else()
-	set(FLAGS "${FLAGS} -DSCALE=${SCALE}")
 	if(NOT MO3 AND MO2)
 		set(FLAGS "${FLAGS} -DMO2")
 	endif()
