Change /D to -D on non-Windows. Use /DSUPPORT_GROUPS to enable group functions (not counting loading/saving in different level formats)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ if(WIN32)
 		set(FLAGS "${FLAGS} /DMO2")
 	endif()
 	if(MO3)
-		set(FLAGS "${FLAGS} /DMO3")
+		set(FLAGS "${FLAGS} /DMO3 /DSUPPORT_GROUPS")
 		set(USE_8X8 on)
 	endif()
 	if(TGA)
@@ -55,7 +55,7 @@ else()
 		set(FLAGS "${FLAGS} -DUSE_TGA")
 	endif()
 	if(MO3)
-		set(FLAGS "${FLAGS} /DMO3")
+		set(FLAGS "${FLAGS} -DMO3 -DSUPPORT_GROUPS")
 	endif()
 	if(MO3 OR USE_8X8)
 		set(FLAGS "${FLAGS} -DUSE_8X8")
