Make it build on Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ if(WIN32)
 	endif()
 	if(USE_8X8)
 		set(FLAGS "${FLAGS} /DUSE_8X8")
-		set(FLAGS "${FLAGS} /DSCALE=5")
+		set(FLAGS "${FLAGS} /DSCALE=4")
 	endif()
 
 	if(CMAKE_BUILD_TYPE MATCHES Debug)
@@ -57,7 +57,7 @@ else()
 	if(MO3)
 		set(FLAGS "${FLAGS} -DMO3 -DSUPPORT_GROUPS")
 	endif()
-	if(MO3 OR USE_8X8)
+	if(USE_8X8)
 		set(FLAGS "${FLAGS} -DUSE_8X8")
 	endif()
 	if(CMAKE_BUILD_TYPE MATCHES Debug)
@@ -66,5 +66,23 @@ else()
 		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${FLAGS}")
 	endif()
 	add_executable(AshEdit ${ASHEDIT_SRC})
-	target_link_libraries(AshEdit "tgui2" "allegro_monolith-static")
+
+	set(LIBRARIES "tgui2" "allegro_monolith-static")
+
+	if(APPLE)
+	else()
+		include(FindPkgConfig)
+		pkg_check_modules(GTK gtk+-2.0)
+		pkg_check_modules(GT gthread-2.0)
+		if(GTK_FOUND AND GT_FOUND)
+			include_directories(${GTK_INCLUDE_DIRS} ${GT_INCLUDE_DIRS})
+			list(APPEND LIBRARIES ${GTK_LIBRARIES} ${GT_LIBRARIES})
+		else()
+			message(FATAL_ERROR "ERROR: GTK development libraries not found!")
+		endif()
+		link_directories("/usr/lib/x86_64-linux-gnu")
+		list(APPEND LIBRARIES "png" "GL" "Xcursor" "Xrandr" "Xi" "Xinerama" "X11" "pthread")
+	endif()
+
+	target_link_libraries(AshEdit ${LIBRARIES})
 endif()
