--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,14 +25,13 @@ if(WIN32)
 	endif()
 	if(MO3)
 		set(FLAGS "${FLAGS} /DMO3 /DSUPPORT_GROUPS")
-		set(USE_8X8 on)
 	endif()
 	if(TGA)
 		set(FLAGS "${FLAGS} /DUSE_TGA")
 	endif()
 	if(USE_8X8)
 		set(FLAGS "${FLAGS} /DUSE_8X8")
-		set(FLAGS "${FLAGS} /DSCALE=4")
+		set(FLAGS "${FLAGS} /DSCALE=6")
 	endif()
 
 	if(CMAKE_BUILD_TYPE MATCHES Debug)
@@ -43,9 +42,9 @@ if(WIN32)
 	list(APPEND ASHEDIT_SRC "src/icon.rc")
 	add_executable(AshEdit WIN32 ${ASHEDIT_SRC})
 	if(CMAKE_BUILD_TYPE MATCHES Debug)
-		target_link_libraries(AshEdit "tgui2d" "allegro_monolith-debug" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
+		target_link_libraries(AshEdit "tgui2d" "allegro_monolith-debug" "freetype_static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi" "gdiplus")
 	else()
-		target_link_libraries(AshEdit "tgui2" "allegro_monolith-static" "freetype_static" "libpng16_static" "jpeg-static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi")
+		target_link_libraries(AshEdit "tgui2" "allegro_monolith-static" "freetype_static" "zlibstatic" "opengl32" "winmm" "psapi" "shlwapi" "gdiplus")
 	endif()
 else()
 	if(NOT MO3 AND MO2)
