--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,8 @@ else()
 	set(LIBRARIES "tgui2" "allegro_monolith-static")
 
 	if(APPLE)
-		set_target_properties(AshEdit PROPERTIES LINK_FLAGS "-framework Foundation -framework OpenGL -framework Cocoa -framework IOKit")
+		set_target_properties(AshEdit PROPERTIES LINK_FLAGS "-framework Foundation -framework OpenGL -framework Cocoa -framework IOKit -stdlib=libstdc++ -lz")
+		set_target_properties(AshEdit PROPERTIES COMPILE_FLAGS "-stdlib=libstdc++")
 		list(APPEND LIBRARIES "freetype")
 	else()
 		include(FindPkgConfig)
