Fix CMake for Linux when building with TGA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ else()
 	if(NOT MO3 AND MO2)
 		set(FLAGS "${FLAGS} -DMO2")
 	endif()
-	if(MO3 OR TGA)
+	if(TGA)
 		set(FLAGS "${FLAGS} -DUSE_TGA")
 	endif()
 	if(MO3)
@@ -60,9 +60,9 @@ else()
 		set(FLAGS "${FLAGS} -DUSE_8X8")
 	endif()
 	if(CMAKE_BUILD_TYPE MATCHES Debug)
-		set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${FLAGS}")
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAGS}")
 	else()
-		set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${FLAGS}")
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAGS}")
 	endif()
 	add_executable(AshEdit ${ASHEDIT_SRC})
 
